# Opengl_engine

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.user.2201311.4.8-pre1  MANUAL.md  Makefile  README.md  cmake_install.cmake
glm/detail/: dummy.cpp
glm/gtc/: matrix_transform.hpp  quaternion.hpp  quaternion.inl
glm/gtx/: quaternion.hpp  quaternion.inl
shaders/: color_fs.glsl  color_vs.glsl  depth_fs.glsl  depth_vs.glsl  error_fs.glsl  error_vs.glsl  hdr_fs.glsl  phong_fs.glsl  phong_vs.glsl  screen_OIT_fs.glsl  screen_vs.glsl  texture_fs.glsl  texture_vs.glsl  transparency_fs.glsl
src/: engine.cpp  engine.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  myopenglwidget.cpp  myopenglwidget.h  opengl_stuff.h  opengldemo.cpp  opengldemo.cpp.autosave  opengldemo.h
src/core/: asset.cpp  asset.h  assetManager.cpp  assetManager.h  bone.cpp  bone.h  camera.cpp  camera.h  frameBuffer.cpp  frameBuffer.h  geometry.cpp  geometry.h  light.cpp  light.h  lightInterface.h  lightsManager.cpp  lightsManager.h  material.cpp  material.h  mesh.cpp  mesh.h  model.cpp  model.h  modelInterface.cpp  modelInterface.h  shader.cpp  shader.h  texture.cpp  texture.h  transform.cpp  transform.h
src/geometry/: bSpline.cpp  bSpline.h  bSplineSurface.cpp  bSplineSurface.h  b_spline.cpp  b_spline.h  b_spline2D.cpp  b_spline2D.h  quad.cpp  quad.h
src/lights/: dirLight.cpp  dirLight.h  light.cpp  light.h  pointLight.cpp  pointLight.h  spotLight.cpp  spotLight.h
src/modelWidget/: icoSphereWidget.cpp  icoSphereWidget.h  importedModelWidget.cpp  importedModelWidget.h  lightInterface.cpp  lightInterface.h  modelInterface.cpp  modelInterface.h  sphereWidget.cpp  sphereWidget.h
src/models/: assimpmodel.cpp  assimpmodel.h  bSpline.cpp  bSpline.h  bSplineSurface.cpp  bSplineSurface.h  cube.cpp  cube.h  cylinder.cpp  cylinder.h  icosphere.cpp  icosphere.h  marchingCube.cpp  marchingCube.h  metaball.cpp  metaball.h  quad.cpp  quad.h  sphere.cpp  sphere.h
src/textures/: texture.cpp  texture.h
src/widgets/: ballWidget.cpp  ballWidget.h  boneWidget.cpp  boneWidget.h  icoSphereWidget.cpp  icoSphereWidget.h  importedModelWidget.cpp  importedModelWidget.h  lightInterface.cpp  lightInterface.h  mainWidget.cpp  mainWidget.h  metaballWidget.cpp  metaballWidget.h  modelInterface.cpp  modelInterface.h  objectInterface.cpp  objectInterface.h  singleMeshModelWidget.cpp  singleMeshModelWidget.h  sphereWidget.cpp  sphereWidget.h  treeWidget.cpp  treeWidget.h
stb/: stb_image.h
